# cosmic-ext-connect-core

./: CLAUDE.md  Cargo.toml  README.md  build.rs  uniffi-bindgen.rs
docs/: Architecture.md  Contributing.md  FFI-Guide.md  Plugin-Development.md  Protocol.md  README.md  Testing.md  issue-49-completion-summary.md
src/: cosmic_connect_core.udl  cosmic_ext_connect_core.udl  error.rs  lib.rs
src/crypto/: certificate.rs  mod.rs  tls.rs
src/ffi/: mod.rs
src/network/: mod.rs
src/network/discovery/: events.rs  mod.rs  service.rs
src/network/transport/: mod.rs  trait.rs
src/plugins/: battery.rs  camera.rs  clipboard.rs  contacts.rs  findmyphone.rs  lock.rs  manager.rs  mod.rs  mpris.rs  notification.rs  notification_image.rs  open.rs  ping.rs  presenter.rs  remoteinput.rs  runcommand.rs  share.rs  telephony.rs  trait.rs  webcam.rs
src/protocol/: mod.rs  packet.rs
src/video/: camera_daemon.rs  frame.rs  h264_decoder.rs  mod.rs  performance.rs  v4l2_device.rs
tests/: camera_integration.rs  camera_test_utils.rs  open_packets_test.rs  v4l2_output.rs
