[package]
name = "cosmic-connect-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Olaf Kfreund <olafkfreund@gmail.com>"]
license = "GPL-2.0-or-later OR GPL-3.0-or-later"
description = "KDE Connect protocol implementation in Rust - shared library for COSMIC Connect"
repository = "https://github.com/olafkfreund/cosmic-connect-core"
readme = "README.md"
keywords = ["kdeconnect", "protocol", "cosmic", "android"]
categories = ["network-programming", "api-bindings"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "cosmic_connect_core"

[features]
default = []
ffi = []  # Enable FFI bindings for Kotlin/Swift
video = ["v4l", "openh264"]  # Enable V4L2 camera loopback support (Linux only)

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Networking
socket2 = "0.5"

# TLS (using rustls 0.22 with ring provider for Android cross-compilation compatibility)
# Note: rustls 0.23+ uses aws-lc-rs by default which has complex C dependencies
# rustls 0.22 uses ring which compiles cleanly for Android targets
rustls = "0.22"
tokio-rustls = "0.25"
rcgen = "0.12"           # Certificate generation (0.12 for stable API)
webpki-roots = "0.26"
rustls-pemfile = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# FFI
uniffi = { version = "0.27", features = ["cli"] }

# Crypto utilities
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
pem = "3.0"              # PEM encoding/decoding
x509-parser = "0.16"     # Certificate parsing
rsa = "0.9"              # RSA key generation
pkcs8 = { version = "0.10", features = ["pem"] }  # PKCS#8 encoding

# Time
chrono = "0.4"
time = { version = "0.3", features = ["macros", "formatting"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Video/V4L2 support (Linux only, feature-gated)
v4l = { version = "0.14", optional = true }  # V4L2 device access
openh264 = { version = "0.6", optional = true }  # H.264 decoding
url = "2.5.8"

# Image processing for notification icons
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.13"

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
